# cnn_gpu_cudnn_lenet

./: CMakeLists.txt  Network.cu  Network.h  readubyte.cpp  readubyte.h  reference_test.cu
layers/: ConvolutionalLayer.cu  ConvolutionalLayer.h  FullyConnectedLayer.cu  FullyConnectedLayer.h  MaxPoolingLayer.cu  MaxPoolingLayer.h
